<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.QuizFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.MainActivity"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/score"
                android:textAlignment="center"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_container"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_question_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/questions_list"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/questions_list"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/question_radio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_q1_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/true_answer"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_q1_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/false_answer"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_q1_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tentative_answer"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/radio_q1_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tentative_answer"
                        android:textSize="18sp" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:onClick="skipQuestion"
                android:text="@string/btn_home" />

            <Button
                android:id="@+id/btn_qstn_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:onClick="skipQuestion"
                android:text="@string/btn_skip" />

            <Button
                android:id="@+id/btn_qstn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:onClick="nextQuestion"
                android:text="@string/btn_next" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>